--- a/index.html
+++ b/index.html
@@ -310,6 +310,7 @@
                 <br>
                 <button @click="showModal = false">取消</button>
                 <button @click="confirmCity">确认</button>
+                 <!-- 老皮正版授权 -->
             </div>
         </div>
     </div>
