--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
             <div class="card" :class="{ flipped: isFlipped }">
                 <!-- 正面 - 新闻 -->
                 <div class="card-face card-front">
-                    <h2>{{ newsData ? newsData.date + ' 今日新闻' : '今日新闻' }}</h2>
+                    <h2>⭐{{ newsData ? newsData.date + ' 今日新闻' : '今日新闻' }}⭐</h2>
                     <div v-if="newsData" class="news-container">
                         <ul class="news-list">
                             <li v-for="(item, index) in newsData.content" :key="index">
@@ -292,7 +292,7 @@
                         <div id="chart" class="chart"></div>
                     </div>
                     <div v-else class="loading">
-                        <p>请选择城市查询天气</p>
+                        <p>💬请选择城市查询天气💬</p>
                     </div>
                 </div>
 
