--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/echarts@5/dist/echarts.min.js"></script>
     <style>
+        @media (max-width: 768px) {
         body {
             font-family: Arial, sans-serif;
             display: flex;
@@ -258,6 +259,7 @@
             /* 长单词或URL自动换行 */
             line-height: 1.5;
         }
+    }
     </style>
 </head>
 
