--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                 <div class="card-face card-back">
                     <h2>📅天气查询📅</h2>
                     <button @click="showModal = true">选择城市</button>
-
+                    <div class="news-list">
                     <div class="weather-info" v-if="weatherData">
                         <h3>{{ city }} 天气</h3>
                         <p class="current-temp">当前温度：{{ weatherData.current.temperature_2m }}°C</p>
@@ -297,7 +297,7 @@
                         <p>💬请选择城市查询天气💬</p>
                     </div>
                 </div>
-
+        </div>
                 <!-- 翻转按钮 -->
                 <button class="flip-button" @click="isFlipped = !isFlipped"></button>
             </div>
