--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                 <!-- 背面 - 天气 -->
                 <div class="card-face card-back">
                     <h2>📅天气查询📅</h2>
-                    <button @click="showModal = true">选择城市</button>
+                    <button @click="showModal = true">选择城市[支持全球语言输入]</button>
                     <div class="news-list">
                     <div class="weather-info" v-if="weatherData">
                         <h3>{{ city }} 天气</h3>
@@ -392,7 +392,7 @@
                     if (!this.weatherData) return;
                     const chart = echarts.init(document.getElementById('chart'));
                     const option = {
-                        title: { text: '过去7天温度变化', left: 'center' },
+                        title: { text: '未来7天温度变化', left: 'center' },
                         tooltip: { trigger: 'axis' },
                         xAxis: { type: 'category', data: this.weatherData.daily.time },
                         yAxis: { type: 'value', name: '温度 (°C)' },
