--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                 <!-- 背面 - 天气 -->
                 <div class="card-face card-back">
                     <h2>📅天气查询📅</h2>
-                    <button @click="showModal = true">选择城市</button>
+                    <button @click="showModal = true">选择城市[支持全球语言输入]</button>
                     <div class="news-list">
                     <div class="weather-info" v-if="weatherData">
                         <h3>{{ city }} 天气</h3>
