--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                         <div id="chart" class="chart"></div>
                     </div>
                     <div v-else class="loading">
-                        <p>💬请选择城市查询天气💬</p>
+                        <p>💬请选择城市查询[稍等本地定位正在启动]💬</p>
                     </div>
                 </div>
         </div>
